# tinyClusteredDB

./: Makefile.am  README.md  configure  configure.ac  create_proto.sh  rebuildconf
common/: Makefile.am  conf.cpp  md5.cpp  message.cpp  message.pb.cc  message.proto  util.cpp
data/: tables.conf
data/input/: test1  test1.schema  test2  test2.schema
data/output/test1/: deptcost.idx  deptid.idx  deptname.idx
data/output/test2/: id.idx  name.idx
include/: conf.h  head.h  md5.h  message.h  message.pb.h  util.h
index/: Makefile.am  create.sh  index.cpp
libnetskeleton/: README.md
libnetskeleton/include/: comm.h  linux_list.h  netskeleton.h  util.h  work_threads.h
libnetskeleton/src/: Makefile  Makefile.am  Makefile.in  netskeleton.c  util.c  work_threads.c
libnetskeleton/test/: Makefile  Makefile.am  Makefile.in  client.c  server.c  test.c  test.sh  test_client.c  test_server.c
server/: Makefile.am  client.sh  server.cpp  test.cpp  test_server.sh
